--- a/src/website/assets/css/game.css
+++ b/src/website/assets/css/game.css
@@ -49,13 +49,10 @@
 .back, .back2 {
     background : #434343;
     color: white;
+    transform: rotateY( 180deg );
 }
 .game_card2 {
     z-index: -1;
-}
-
-.anim{
-    animation : anim_card;
 }
 
 .top-left {
@@ -120,20 +117,9 @@
 
 .response-tab tr, .response-tab td{
     border : none !important;
-    z-index: 5;
 }
 
 .responses{
     width: 15em;
     height: 6em;
-    z-index: 6;
-}
-
-@keyframes anim_card {
-    from{
-
-    }
-    to{
-        rotateY( 180deg )
-    }
 }
